third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_full_invalid.exp

Diagnostics:
error: cannot immutably borrow local `v` since other mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_full_invalid.move:33:17
   │
32 │         let x = &mut v;
   │                 ------ previous mutable local borrow
33 │         let y = &v;
   │                 ^^ immutable borrow attempted here

error: cannot mutably borrow local `v` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_local_full_invalid.move:13:17
   │
12 │         let x = &mut v;
   │                 ------ previous mutable local borrow
13 │         let y = &mut v;
   │                 ^^^^^^ mutable borrow attempted here

error: cannot mutably borrow local `v` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_local_full_invalid.move:18:24
   │
17 │         let x = &mut v;
   │                 ------ previous mutable local borrow
18 │         let y = id_mut(&mut v);
   │                        ^^^^^^ mutable borrow attempted here

error: cannot mutably borrow local `v` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_local_full_invalid.move:23:17
   │
22 │         let x = &v;
   │                 -- previous local borrow
23 │         let y = &mut v;
   │                 ^^^^^^ mutable borrow attempted here
